[gd_scene load_steps=9 format=3 uid="uid://8mysepq7h56n"]

[ext_resource type="SystemFont" uid="uid://bqpmvspsbpcmd" path="res://ui/main/SetupTeams/VerdanaFont.tres" id="1_fmqyd"]
[ext_resource type="StyleBox" uid="uid://ckha6ja788jld" path="res://ui/main/SetupTeams/ButtonStyleNormal.tres" id="1_jyy3c"]
[ext_resource type="Script" path="res://ui/main/SetupTeams/PlayerEdit.gd" id="1_wia2l"]
[ext_resource type="StyleBox" uid="uid://bequivv5im1u4" path="res://ui/main/SetupTeams/ButtonStylePressed.tres" id="2_sv04e"]
[ext_resource type="StyleBox" uid="uid://yw1cq6b70rm4" path="res://ui/main/SetupTeams/RedButtonStyleNormal.tres" id="4_ca57q"]
[ext_resource type="StyleBox" uid="uid://co365rui2e327" path="res://ui/main/SetupTeams/RedButtonStyleHover.tres" id="5_1dqhu"]

[sub_resource type="Theme" id="Theme_5sy36"]
default_font = ExtResource("1_fmqyd")
default_font_size = 25

[sub_resource type="Theme" id="Theme_n5orh"]
default_font = ExtResource("1_fmqyd")
default_font_size = 25

[node name="PlayerEdit" type="Node2D"]
script = ExtResource("1_wia2l")

[node name="SaveButton" type="Button" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 250.0
offset_bottom = 52.0
theme = SubResource("Theme_5sy36")
theme_override_styles/normal = ExtResource("1_jyy3c")
theme_override_styles/hover = ExtResource("2_sv04e")
theme_override_styles/pressed = ExtResource("1_jyy3c")
text = "Save"

[node name="RemoveButton" type="Button" parent="."]
offset_left = 250.0
offset_top = 2.0
offset_right = 498.0
offset_bottom = 52.0
theme = SubResource("Theme_5sy36")
theme_override_styles/normal = ExtResource("4_ca57q")
theme_override_styles/hover = ExtResource("5_1dqhu")
theme_override_styles/pressed = ExtResource("4_ca57q")
text = "Remove"

[node name="PlayerNameLine" type="LineEdit" parent="."]
offset_left = 2.0
offset_top = 55.0
offset_right = 250.0
offset_bottom = 105.0
theme = SubResource("Theme_n5orh")
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_styles/read_only = ExtResource("4_ca57q")
text = "Player Name:"
alignment = 1
editable = false
expand_to_text_length = true

[node name="PlayerNameLineEdit" type="LineEdit" parent="."]
offset_left = 250.0
offset_top = 55.0
offset_right = 498.0
offset_bottom = 105.0
theme = SubResource("Theme_n5orh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("1_jyy3c")
theme_override_styles/focus = ExtResource("1_jyy3c")
theme_override_styles/read_only = ExtResource("1_jyy3c")
alignment = 1
expand_to_text_length = true

[connection signal="button_down" from="SaveButton" to="." method="_on_save_button_button_down"]
[connection signal="button_down" from="RemoveButton" to="." method="_on_remove_button_button_down"]
